cf_analysis_results/checkerframework_3.42.0_results_WPI/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8.txt
../dataset/june2020_dataset/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:112: error: (required.method.not.called) $$ 4 $$ method close $$ response $$ java.io.InputStream $$ regular method exit $$ ( 2672, 2699 ) $$ @MustCall method close may not have been invoked on response or any of its aliases.
			response = url.openStream();
			         ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: regular method exit
warning: (annotation.not.completed) $$ 2 $$ org.joda.time.base.AbstractInstant.toString() $$ @ToString $$  $$ Element org.joda.time.base.AbstractInstant.toString() contains annotation @ToString which can't be found. Make sure your classpath is set correctly.
1 error
1 warning
